vagrant/apps/service-3/manifest.yaml
# 2. APLICAÇÃO (Service e Deployment)
apiVersion: v1
kind: Service
metadata:
  name: service-3
  namespace: service-3
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: service-3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-3
  namespace: service-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-3
  template:
    metadata:
      labels:
        app: service-3
    spec:
      serviceAccountName: service-3-sa # Usando a identidade própria
      containers:
      - name: app
        image: kennethreitz/httpbin
        ports:
        - containerPort: 80

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: service-3-gateway
  namespace: service-3
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-3-vs
  namespace: service-3
spec:
  hosts:
  - "*"
  gateways:
  - service-3-gateway
  http:
  - route:
    - destination:
        host: service-3.service-3.svc.cluster.local
        port:
          number: 80

---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: jwt-auth
  namespace: service-3
spec:
  selector:
    matchLabels:
      app: service-3
  jwtRules:
  - issuer: "testing@secure.istio.io"
    jwksUri: "https://raw.githubusercontent.com/istio/istio/release-1.34/security/tools/jwt/samples/jwks.json"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: service-3
spec:
  selector:
    matchLabels:
      app: service-3
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["testing@secure.istio.io/*"]

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-internal-mesh
  namespace: service-3
spec:
  selector:
    matchLabels:
      app: service-3
  action: DENY
  rules:
  - from:
    - source:
        # Bloqueia explicitamente esses dois namespaces, 
        # independentemente de terem JWT ou não.
        namespaces: ["service-1", "service-2"]
